kubernetes/k3s-01/workloads/argocd/middleware-ipallowlist.yml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: argocd-ipallowlist
  namespace: argocd
spec:
  ipAllowList:
    sourceRange:
      - 172.16.0.2
      - 192.168.10.3
      - 192.168.10.4
